added API LeagueController
